# s3os

./: .flake8  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: test_and_lint.yml
package/: __init__.py  __main__.py
s3os/: __init__.py  api.py  encoding.py  s3_dict.py  s3_wrapper.py
tests/: __init__.py  test_api.py  test_encoding.py  test_s3_dict.py  test_s3_wrapper.py
